[package]
name = "rustlog"
version = "0.1.0"
edition = "2024"

[workspace]
# 依赖解析器版本（2024 Edition 默认使用 resolver = "3"，优化了依赖解析逻辑）
#resolver = "3"
# 声明 Workspace 成员（支持通配符，如 "crates/*"）
members = [
    "crossbeam/segqueue",
    "downcast",
    "json",
    "jwt",
    "mod_use",
    "moka/future",
    "moka/sync",
    "net/tcpserver",
    "net/tcpclient",
    "time/std",
    "ring/main",
    "ringbuf/main",
]

# 共享依赖（推荐）：统一管理依赖版本，成员 crate 可直接引用
[workspace.dependencies]
# 错误
thiserror = "2.0"
anyhow = "1.0"
# 时间
time = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.12"

# 异步运行时
tokio = { version = "1.52", features = ["full"] }

# jwt
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
# 随机数
rand = "0.10"
# 内存缓存
moka = "0.12"
# 队列
crossbeam-queue = "0.3"
# 加密
ring = "0.17"
# 环形缓冲区
ringbuf = "0.5"
# 实现多态
downcast-rs = "2.0"

# 追踪日志-禁用冗余以提升运行时性能
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

#tokio = { git = "https://github.com/tokio-rs/tokio", branch = "main" }
#tokio = { git = "https://github.com/tokio-rs/tokio", tag = "tokio-1.52.3" }
#tokio = { git = "https://github.com/tokio-rs/tokio", rev = "778e9d9" }

#[[example]]
#name = "hello_world"
#path = "examples/example_01_hello_world.rs"
