[tool.poetry]
name = "fastapidemo"
version = "0.1.0"
description = ""
authors = ["laixhe <laixhe@laixhe.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
